components/Logos/le2023: Adjust margin top to get correct alignment [refs #4056]

--- a/src/components/Logos/le2023/Logo.module.scss
+++ b/src/components/Logos/le2023/Logo.module.scss
@@ -1,4 +1,4 @@
-/* Styles for the le2022 Logo component */
+/* Styles for the le2023 Logo component */
 @import "../../../styles/variables.scss";
 
 .container {
@@ -10,7 +10,7 @@
     overflow: hidden;
 
     img {
-      margin-top: -0.3em;
+      margin-top: 0.45em;
       margin-bottom: -0.1em;
     }
   }
